[gd_scene load_steps=38 format=2]

[ext_resource path="res://Scripts/Player/PlayerKinematic.gd" type="Script" id=1]
[ext_resource path="res://assets/player/Individual Sprites/slide/adventurer-slide-00.png" type="Texture" id=2]
[ext_resource path="res://assets/player/Individual Sprites/slide/adventurer-slide-01.png" type="Texture" id=3]
[ext_resource path="res://assets/player/Individual Sprites/slide/adventurer-stand-00.png" type="Texture" id=4]
[ext_resource path="res://assets/player/Individual Sprites/jump/adventurer-jump-00.png" type="Texture" id=5]
[ext_resource path="res://assets/player/Individual Sprites/jump/adventurer-jump-01.png" type="Texture" id=6]
[ext_resource path="res://assets/player/Individual Sprites/jump/adventurer-jump-02.png" type="Texture" id=7]
[ext_resource path="res://assets/player/Individual Sprites/jump/adventurer-jump-03.png" type="Texture" id=8]
[ext_resource path="res://assets/player/Individual Sprites/run/adventurer-run-00.png" type="Texture" id=9]
[ext_resource path="res://assets/player/Individual Sprites/run/adventurer-run-01.png" type="Texture" id=10]
[ext_resource path="res://assets/player/Individual Sprites/run/adventurer-run-02.png" type="Texture" id=11]
[ext_resource path="res://assets/player/Individual Sprites/run/adventurer-run-03.png" type="Texture" id=12]
[ext_resource path="res://assets/player/Individual Sprites/run/adventurer-run-04.png" type="Texture" id=13]
[ext_resource path="res://assets/player/Individual Sprites/run/adventurer-run-05.png" type="Texture" id=14]
[ext_resource path="res://assets/player/Individual Sprites/fall/adventurer-fall-00.png" type="Texture" id=15]
[ext_resource path="res://assets/player/Individual Sprites/fall/adventurer-fall-01.png" type="Texture" id=16]
[ext_resource path="res://assets/player/Individual Sprites/idle_no_weapon/adventurer-idle-00.png" type="Texture" id=17]
[ext_resource path="res://assets/player/Individual Sprites/idle_no_weapon/adventurer-idle-01.png" type="Texture" id=18]
[ext_resource path="res://assets/player/Individual Sprites/idle_no_weapon/adventurer-idle-02.png" type="Texture" id=19]
[ext_resource path="res://assets/player/Individual Sprites/idle_no_weapon/adventurer-idle-03.png" type="Texture" id=20]
[ext_resource path="res://assets/player/Individual Sprites/idle_weapon/adventurer-idle-2-00.png" type="Texture" id=21]
[ext_resource path="res://assets/player/Individual Sprites/idle_weapon/adventurer-idle-2-01.png" type="Texture" id=22]
[ext_resource path="res://assets/player/Individual Sprites/idle_weapon/adventurer-idle-2-02.png" type="Texture" id=23]
[ext_resource path="res://assets/player/Individual Sprites/idle_weapon/adventurer-idle-2-03.png" type="Texture" id=24]
[ext_resource path="res://assets/player/Individual Sprites/wall_jump/adventurer-wall-slide-00.png" type="Texture" id=25]
[ext_resource path="res://assets/player/Individual Sprites/wall_jump/adventurer-wall-slide-01.png" type="Texture" id=26]
[ext_resource path="res://assets/player/Individual Sprites/roll/adventurer-smrslt-00.png" type="Texture" id=27]
[ext_resource path="res://assets/player/Individual Sprites/roll/adventurer-smrslt-01.png" type="Texture" id=28]
[ext_resource path="res://assets/player/Individual Sprites/roll/adventurer-smrslt-02.png" type="Texture" id=29]
[ext_resource path="res://assets/player/Individual Sprites/roll/adventurer-smrslt-03.png" type="Texture" id=30]
[ext_resource path="res://Assets/particles_texture/Fogo_propuncao.png" type="Texture" id=31]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "dash",
"speed": 9.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "idle_no_weapon",
"speed": 4.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "idle_weapon",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "wall",
"speed": 4.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "jump_roll",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.51336
height = 16.2648

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.222222, 0.933333, 1 )
colors = PoolColorArray( 1, 0.839216, 0.105882, 1, 0.952941, 0.537255, 0.0941176, 1, 1, 0.230017, 0.0313725, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 25.0
gravity = Vector3( 0, -120, 0 )
initial_velocity = 50.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 1.0
color_ramp = SubResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "take_damage"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PlayerKinematic" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprites" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "dash"

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -0.879559, 3.59325 )
shape = SubResource( 2 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="ColissionWall" type="RayCast2D" parent="."]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 6 )

[node name="DoubleJumpParticle" type="Particles2D" parent="."]
position = Vector2( 4.42004, 17.3101 )
rotation = 1.5708
emitting = false
amount = 200
lifetime = 0.4
one_shot = true
speed_scale = 1.5
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )

[node name="DoubleJumpParticle2" type="Particles2D" parent="."]
position = Vector2( -4.85854, 17.188 )
rotation = 1.5708
emitting = false
amount = 200
lifetime = 0.4
one_shot = true
speed_scale = 1.5
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 31 )

[node name="DelayAfterDamageTime" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/take_damage = SubResource( 6 )

[node name="DashTime" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="DelayAfterDamageTime" to="." method="_on_DelayAfterDamageTime_timeout"]
[connection signal="timeout" from="DashTime" to="." method="_on_DashTime_timeout"]
